fix(cart): Add z-index to prevent banner overlap.

--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -2,6 +2,7 @@ $padding-horizontal: 1em;
 $cart-margin: .5em;
 
 .cart {
+  z-index: 10;
   position: fixed;
   bottom: 1.7em;
   left: 1.7em;
